--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -18,15 +18,9 @@
 }
 
 .logo h1 {
-  font-size: 25px;
-  font-weight: 550;
+  font-size: 36px;
+  font-weight: bold;
   margin: 0 0 0 30px;
-  color: rgb(4, 175, 4);
-}
-
-.logo span{
-  font-weight: bolder;
-  color: #0D8752;
 }
 
 .header-details {
