--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -23,6 +23,7 @@
     text-shadow: 1px 1px 1px #FF7F50;
     font-weight: bolder;
     margin: 0 0 0 30px;
+    text-align: left;
   }
   
   .header-details {
@@ -45,7 +46,7 @@
     color: #333;
   }
   
-  .nav-link.active {
+  .active {
     color: #333333;
     text-decoration: underline;
     font-weight: bold;
@@ -104,3 +105,130 @@
   .signup-btn:hover {
     background-color: #519254;
   }
+
+  .App{
+    width: 1300px;
+    margin-top: 20px;
+  }
+
+  
+/* Container for the entire meals component */
+.meals {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Heading styles */
+.meals h1 {
+  text-align: center;
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+/* Meal list container */
+.meal-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+/* Meal card styling */
+.meal-card {
+  width: 200px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: center;
+}
+
+.meal-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.meal-card h3 {
+  font-size: 1.2rem;
+  color: #333;
+  margin: 10px 0;
+}
+
+.meal-card h4 {
+  font-size: 1rem;
+  color: #666;
+  margin: 5px 0;
+}
+
+.meal-card span{
+  color: #ffa07e;
+}
+
+.meal-card p {
+  font-size: 0.9rem;
+  color: #777;
+  margin: 10px 0;
+}
+
+.meal-card h3:last-child {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #27ae60;
+}
+
+.add-to-order {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.add-to-order:hover {
+  background-color: #2980b9;
+}
+
+/* Loading and Error styles */
+div {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #e74c3c;
+}
+
+/* Pagination controls */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+.pagination-button {
+  background-color: #2ecc71;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+
+}
+
+.pagination-button:hover {
+  background-color: #27ae60;
+}
+
+.pagination-button:disabled {
+  background-color: #bdc3c7;
+  cursor: not-allowed;
+}
