--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -316,3 +316,140 @@ form{
   font-size: 14px;
   margin-bottom: 10px;
 }
+
+#role{
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 8px 5px;
+  cursor: pointer;
+  width: 100%;
+
+}
+
+/* Reset default margin and padding */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Body and general layout styles */
+body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+/* Main container for the staff list */
+.staffs {
+  max-width: 1200px;
+  width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #888;
+}
+
+/* Staff list container */
+.staff-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); /* Dynamic card sizing */
+  gap: 20px;
+  margin-top: 20px;
+}
+
+/* Individual staff card styling */
+.staff-card {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.staff-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.staff-card h3 {
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.staff-card h4 {
+  font-size: 1.1rem;
+  color: #555;
+}
+
+.staff-card p {
+  font-size: 1rem;
+  color: #777;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+/* Pagination container */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+/* Pagination buttons */
+button {
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border-radius: 5px;
+  margin: 0 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:disabled {
+  background-color: #dcdcdc;
+  cursor: not-allowed;
+}
+
+button:hover:not(:disabled) {
+  background-color: #45a049;
+}
+
+span {
+  font-size: 1.1rem;
+  color: #555;
+}
+
+.edit{
+  background-color: rgb(240, 240, 27);
+  color: blue;
+  font-weight: bold;
+}
+
+.delete{
+  background-color: #3498DB;
+}
