--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -182,20 +182,21 @@
   color: #27ae60;
 }
 
-.add-to-order {
-  background-color: #3498db;
+.delete-meal {
+  background-color: red;
   color: white;
   border: none;
   padding: 10px;
-  border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
+  border-radius: 5px;
+  font-size: 12px;
+  transition: background-color 0.3s;
 }
 
-.add-to-order:hover {
-  background-color: #2980b9;
+.delete-meal:hover {
+  background-color: darkred;
 }
+
 
 /* Loading and Error styles */
 div {
