--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -1,235 +1,416 @@
+
+
 /* Header styles */
 .header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: #f8f8f8;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  .logo{
-    width: 100%;
-  }
-  
-  .logo h1 {
-    font-size: 25px;
-    color: #FF7F50;
-    text-shadow: 1px 1px 1px #FF7F50;
-    font-weight: bolder;
-    margin: 0 0 0 30px;
-    text-align: left;
-  }
-  
-  .header-details {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 0 30px 0 0 ;
-  }
-  
-  .links {
-    margin-right: 20px;
-  }
-  
-  .nav-link {
-    font-size: 18px;
-    margin-right: 20px;
-    text-decoration: none;
-    font-weight: 400;
-    color: #333;
-  }
-  
-  .active {
-    color: #333333;
-    text-decoration: underline;
-    font-weight: bold;
-  }
-  
-  .nav-link:hover {
-    text-decoration: underline;
-  }
-  
-  .cart-signup {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5%;
-    margin-right: 20px;
-  }
-  
-  .cart {
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
-  }
-  
-  .icon{
-    font-size: 25px;
-    color: rgb(43, 43, 43);
-    cursor: pointer;
-  }
-  
-  .cart-number {
-    position: absolute;
-    top: -8px;
-    right: -8px;
-    background-color: rgb(250, 53, 53);
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .signup-btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100px;
-  }
-  
-  .signup-btn:hover {
-    background-color: #519254;
-  }
-
-  .App{
-    width: 1300px;
-    margin-top: 20px;
-  }
-
-  
-/* Container for the entire meals component */
-.meals {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Heading styles */
-.meals h1 {
-  text-align: center;
-  font-size: 2rem;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-/* Meal list container */
-.meal-list {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-/* Meal card styling */
-.meal-card {
-  width: 200px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  padding: 15px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  text-align: center;
-}
-
-.meal-card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-.meal-card h3 {
-  font-size: 1.2rem;
-  color: #333;
-  margin: 10px 0;
-}
-
-.meal-card h4 {
-  font-size: 1rem;
-  color: #666;
-  margin: 5px 0;
-}
-
-.meal-card span{
-  color: #ffa07e;
-}
-
-.meal-card p {
-  font-size: 0.9rem;
-  color: #777;
-  margin: 10px 0;
-}
-
-.meal-card h3:last-child {
-  font-size: 1.1rem;
-  font-weight: bold;
-  color: #27ae60;
-}
-
-.delete-meal {
-  background-color: red;
-  color: white;
-  border: none;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px;
+  background-color: #f8f8f8;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.logo{
+  width: 100%;
+}
+
+.logo h1 {
+  font-size: 25px;
+  color: #FF7F50;
+  text-shadow: 1px 1px 1px #FF7F50;
+  font-weight: bolder;
+  margin: 0 0 0 30px;
+  text-align: left;
+}
+
+.header-details {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0 30px 0 0 ;
+}
+
+.links {
+  margin-right: 20px;
+}
+
+.nav-link {
+  font-size: 18px;
+  margin-right: 20px;
+  text-decoration: none;
+  font-weight: 400;
+  color: #333;
+}
+
+.active {
+  color: #333333;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+.cart-signup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5%;
+  margin-right: 20px;
+}
+
+.cart {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.icon{
+  font-size: 25px;
+  color: rgb(43, 43, 43);
   cursor: pointer;
-  border-radius: 5px;
-  font-size: 12px;
-  transition: background-color 0.3s;
 }
 
-.delete-meal:hover {
-  background-color: darkred;
-}
-
-
-/* Loading and Error styles */
-div {
-  text-align: center;
-  font-size: 1.2rem;
-  color: #e74c3c;
-}
-
-/* Pagination controls */
-.pagination {
+.cart-number {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: rgb(250, 53, 53);
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  gap: 20px;
+  align-items: center;
+}
+
+.login{
+  text-decoration: none;
+  background-color: #4CAF50;
+  color: white;
+  padding: 6px 10px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  font-size: 14px;
+}
+
+.signup-btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+}
+
+.signup-btn:hover {
+  background-color: #519254;
+}
+
+.App{
+  width: 1300px;
+  margin-top: 60px;
+}
+
+
+/* Main container for meals */
+.meals {
+width: 80%;
+max-width: 1200px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin: 20px auto;
+padding: 20px;
+background-color: #fff;
+border-radius: 10px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Heading */
+h1 {
+font-size: 2.5rem;
+color: #2c3e50;
+text-align: center;
+align-self: start;
+margin-bottom: 20px;
+}
+
+/* Table styling */
+.meal-table {
+width: 100%;
+border-collapse: collapse;
+margin-bottom: 30px;
+}
+
+.meal-table th, .meal-table td {
+padding: 12px;
+text-align: left;
+border-bottom: 1px solid #ddd;
+}
+
+.meal-table th {
+background-color: #2980b9;
+color: white;
+font-size: 1.2rem;
+}
+
+.meal-table td {
+font-size: 1rem;
+}
+
+.meal-table tr:hover {
+background-color: #f1f1f1;
+}
+
+/* No meals available message */
+.no-meals {
+text-align: center;
+font-size: 1.2rem;
+color: #7f8c8d;
+font-style: italic;
+}
+
+/* Button for Add to Order */
+.add-to-order {
+background-color: #2980b9;
+color: white;
+font-size: 1rem;
+padding: 8px 15px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+transition: background-color 0.3s ease;
+}
+
+.add-to-order:hover {
+background-color: #38a8f3;
+}
+
+/* Pagination */
+.pagination {
+display: flex;
+justify-content: center;
+gap: 15px;
 }
 
 .pagination-button {
-  background-color: #2ecc71;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-
+background-color: #bdc3c7;
+border: 1px solid #bdc3c7;
+padding: 10px 20px;
+font-size: 1.2rem;
+font-weight: bold;
+font-style: italic;
+border-radius: 5px;
+cursor: pointer;
+transition: background-color 0.3s ease;
 }
 
+
 .pagination-button:hover {
-  background-color: #27ae60;
+background-color: rgb(233, 232, 232);
 }
 
 .pagination-button:disabled {
-  background-color: #bdc3c7;
-  cursor: not-allowed;
+background-color: #ebebeb;
+cursor: not-allowed;
+}
+
+/* Loading & Error */
+.loading, .error {
+text-align: center;
+font-size: 1.5rem;
+color: #e74c3c;
+}
+
+/* Styles for login form */
+.login-form {
+max-width: 400px;
+margin: 0 auto;
+padding: 20px;
+border: 1px solid #ccc;
+border-radius: 5px;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+box-shadow: 0 4px 6px rgb(160, 154, 154);
+}
+
+form{
+width: 100%;
+}
+
+.login-form h2 {
+align-self: center;
+text-align: center;
+margin-bottom: 20px;
+}
+
+.login-form div {
+margin-bottom: 10px;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+width: 100%;
+}
+
+.login-form label {
+margin-bottom: 5px;
+}
+
+.login-form input {
+width: 97%;
+padding: 8px 0 8px 8px;
+margin-bottom: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+outline: none;
+font-size: 16px;
+background-color: white;
+}
+
+.login-form button {
+width: 100%;
+padding: 10px;
+background-color: #4CAF50;
+color: white;
+border: none;
+border-radius: 5px;
+font-size: 16px;
+cursor: pointer;
+transition: .3s ease-in-out;
+}
+
+.login-form button:hover{
+background-color: #40c745;
+}
+
+.login-form button:disabled {
+background-color: #ddd;
+}
+
+.error-message {
+color: red;
+font-size: 14px;
+margin-bottom: 10px;
+}
+
+#role{
+outline: none;
+border: 1px solid #ccc;
+border-radius: 5px;
+font-size: 14px;
+padding: 8px 5px;
+cursor: pointer;
+width: 100%;
+
+}
+
+/* Reset default margin and padding */
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+.orders{
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: -60px;
+gap: 10px;
+}
+
+.orders button{
+color: black;
+background-color: transparent;
+font-weight: 600;
+font-size: 16px;
+}
+
+.orders button:hover{
+background-color: rgba(139, 137, 137, 0.1);
+color: rgb(80, 77, 77);
+}
+
+/* Container for the orders page */
+.orders {
+padding: 30px;
+background-color: #f4f4f9;
+font-family: 'Arial', sans-serif;
+margin-top: 20px;
+}
+
+/* Style for the table container */
+.order-list {
+margin-top: 30px;
+overflow-x: auto;
+padding: 20px;
+background-color: #fff;
+border-radius: 8px;
+box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Style for the table */
+.orders-table {
+width: 100%;
+border-collapse: collapse;
+border: none;
+background-color: #fff;
+font-size: 14px;
+color: #333;
+}
+
+/* Style for table headers */
+.orders-table th {
+background-color:rgb(80, 103, 236);
+color: #fff;
+padding: 12px 15px;
+text-align: left;
+text-transform: uppercase;
+font-weight: bold;
+font-size: 16px;
+}
+
+/* Style for table data cells */
+.orders-table td {
+padding: 12px 15px;
+text-align: left;
+border: 1px solid #ddd;
+font-size: 14px;
+color: #555;
+}
+
+/* Row hover effect */
+.orders-table tr:hover {
+background-color: #f4f4f4;
+}
+
+/* Zebra striping for rows */
+.orders-table tr:nth-child(odd) {
+background-color: #f9f9f9;
+}
+
+/* Loading/Error message */
+p {
+font-size: 14px;
+color: #666;
+margin-top: 15px;
+font-weight: 500;
+}
+
+.back{
+background-color: red;
 }
