--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -16,11 +16,24 @@ body {
 .App {
   display: flex;
   flex-direction: column;
+  align-self: center;
   min-height: 100vh;
-  width: 100%; 
+  width: 1000px; 
+  padding: 20px;
 }
 
-.page-content {
-  padding: 20px;
-  flex: 1;
+.page-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
+
+
+@media (max-width: 700px) {
+  .page-content{
+    width: fit-content;
+    align-self: center;
+  }
+}
+
