--- a/UI/hotel-management-app/src/Styles/Header.css
+++ b/UI/hotel-management-app/src/Styles/Header.css
@@ -81,6 +81,23 @@ body {
     transition: background-color 0.3s ease-in-out;
 }
 
+.logout-btn {
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 20px;
+    font-weight: bolder;
+    font-size: 14px;
+}
+
+.logout-btn:hover {
+    background-color: #d32f2f;
+}
+
+
 .signup-btn:hover {
     background-color: #0056b3;
 }
