--- a/UI/hotel-management-app/src/Styles/SignUp.css
+++ b/UI/hotel-management-app/src/Styles/SignUp.css
@@ -83,6 +83,7 @@
     font-size: 16px;
     margin-top: 10px;
     text-align: center;
+    text-shadow: 2px 2px 4px #e60000;
 }
 
 /* Responsive styles */
