--- a/UI/hotel-management-app/src/Styles/Admin.css
+++ b/UI/hotel-management-app/src/Styles/Admin.css
@@ -23,7 +23,7 @@ li {
 }
 
 /* Style the buttons */
-button {
+.list button {
     background-color: transparent;
     color: black;
     padding: 5px 0;
@@ -35,7 +35,7 @@ button {
 }
 
 /* Change button color on hover */
-button:hover {
+.list button:hover {
     background-color: transparent;
     text-decoration: underline;
 }
