--- a/UI/hotel-management-app/src/App.css
+++ b/UI/hotel-management-app/src/App.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   align-self: center;
-  min-height: 100vh;
+  min-height: fit-content;
   width: 1000px; 
   padding: 20px;
 }
