--- a/UI/hotel-management-app/src/Styles/Admin.css
+++ b/UI/hotel-management-app/src/Styles/Admin.css
@@ -51,3 +51,38 @@ li {
     text-decoration: none;
     background-color: #3498db;
 }
+
+h4 {
+    font-size: 1.2em;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+/* Blur effect for background when a modal is open */
+.blur-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, 0.4);
+    filter: blur(2px);
+    z-index: 1;
+    pointer-events: none;
+}
+
+/* Modal form styling */
+.modal-form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    width: fit-content;
+    transition: opacity 0.3s ease;
+}
+
