--- a/UI/hotel-management-app/src/Styles/Meals.css
+++ b/UI/hotel-management-app/src/Styles/Meals.css
@@ -219,3 +219,12 @@ h1 {
     background-color: #c82333;
 }
 
+.back{
+    background-color: #007bff;
+    margin-top: 10px;
+}
+
+.back:hover{
+    background-color: #3091f8;
+}
+
