--- a/UI/hotel-management-app/src/Styles/Admin.css
+++ b/UI/hotel-management-app/src/Styles/Admin.css
@@ -84,5 +84,7 @@ h4 {
     z-index: 2;
     width: fit-content;
     transition: opacity 0.3s ease;
+    margin-top: 10px;
+    width: fit-content;
 }
 
