--- a/UI/hotel-management-app/src/Styles/AddMeal.css
+++ b/UI/hotel-management-app/src/Styles/AddMeal.css
@@ -113,16 +113,29 @@ button {
         margin: 20px;
     }
 
+    h2{
+        margin-bottom: 0;
+    }
+
     .form-buttons {
         flex-direction: column;
     }
 
     button {
-        width: 100%;
         margin-bottom: 10px;
+        width: max-content;
     }
 
     .cancel-button {
         margin-left: 0;
+        width: fit-content;
+    }
+
+    .modal-form{
+        margin-top: 60px;
+    }
+
+    .form-buttons{
+        flex-direction: row;
     }
 }
