--- a/UI/hotel-management-app/src/Styles/Header.css
+++ b/UI/hotel-management-app/src/Styles/Header.css
@@ -131,11 +131,12 @@ body {
 }
 
 /* Media Queries for Responsiveness */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     .header {
         padding: 15px 20px;
         flex-direction: column;
         align-items: flex-start;
+        line-height: 1;
     }
 
     .logo h1 {
@@ -144,7 +145,6 @@ body {
 
     .header-details {
         width: 100%;
-        margin-top: 10px;
         justify-content: space-between;
     }
 
@@ -154,6 +154,12 @@ body {
 
     .signup-btn {
         margin-left: 10px;
+    }
+
+    .logout-btn{
+        width: fit-content;
+        padding: 3px;
+        font-size: 14px;
     }
 }
 
