--- a/UI/hotel-management-app/src/Styles/Header.css
+++ b/UI/hotel-management-app/src/Styles/Header.css
@@ -136,7 +136,7 @@ body {
         padding: 15px 20px;
         flex-direction: column;
         align-items: flex-start;
-        line-height: 1;
+        line-height: 0.7;
     }
 
     .logo h1 {
@@ -145,7 +145,7 @@ body {
 
     .header-details {
         width: 100%;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     .cart-signup {
